<resources>
    <string name="app_name">JapaRestaurante</string>
    <string name="home_logo">Japa Restaurante &amp; Sushi bar</string>
    <string name="btn_pedidos">Registrar Pedido</string>
    <string name="btn_horas">Horas Trabalhadas</string>
    <string name="sushi_alt">sushi alt</string>
    <string name="pedido_activity">Anotar Pedido</string>
    <string name="btn_enviar">Enviar</string>
    <string name="novo_produto">Novo</string>
    <string name="atualizar_produto">Atualizar</string>
    <string name="preencher_email">Enviar e-mail fornecedor</string>
    <string name="endereco_fornecedor">E-mail fornecedor</string>
    <string name="hint_endereco_fornecedor">Digite o endereço de email</string>
    <string name="nome_produto">Produto</string>
    <string name="hint_nome_produto">Digite o nome do produto em falta</string>
    <string name="qtd_produto">Quantidade</string>
    <string name="hint_quantidade">Digite a quantidade</string>
    <string name="enviar_email">Enviar</string>

</resources>
