<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoProduto">
    <include
        android:id="@+id/include"
        layout="@layout/activity_cabecalho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:id="@+id/txtIdProdutoNovo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_produto" />

        <EditText
            android:id="@+id/edtIdProdutoNovo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ID Produto" />

        <EditText
            android:id="@+id/edtProdutoNovo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome_produto" />

        <TextView
            android:id="@+id/txtQtdNovo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qtd_produto" />

        <EditText
            android:id="@+id/edtQtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantidade"
            android:inputType="number" />

        <Button
            android:id="@+id/btnSalvarNovo"
            android:layout_width="136dp"
            android:layout_height="47dp"
            android:onClick="onClickSalvar"
            android:text="Salvar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>